--- a/rt/index.html
+++ b/rt/index.html
@@ -10,7 +10,7 @@
   <meta name="author" content="">
   <link rel="icon" href="images/logo.png">
 
-  <title>DLT Logistics LLC</title>
+  <title>Red Trukcing</title>
 
   <!-- Bootstrap core CSS -->
   <link href="css/bootstrap.css" rel="stylesheet">
@@ -40,15 +40,19 @@
 
 <body id="index">
 
-  <section>
+  <section class="header">
 
+    <div class="container custom-header"> 
+      <div class="logo">
+        <a href="#">
+          <img src="./images/logo-banner.png">
+        </a>
+      </div>
+    </div>
+    </section>
+    <section>
     <nav class="navbar navbar-inverse navbar-static-top">
       <div class="container custom-header">
-
-        <div class="logo">
-          <span> DLT</span> Logistics LLC
-        </div>
-
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
             aria-expanded="false" aria-controls="navbar">
@@ -79,9 +83,7 @@
 
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <div class="container">
-          <a href="#" class="logo">
-            <img src="./images/logo-banner.png">
-          </a>
+         
          
           <!-- Wrapper for slides -->
           <div class="carousel-inner">
@@ -172,68 +174,76 @@
 
   <section class="lable-strip">
     <div class="container">
+      <div class="row">
+        <div class="col-md-8 col-lg-8 col-sm-12">
       <h2> Who are we...DLT Logistics
       </h2>
 
       <h4>Built on Excellence</h4>
       <p>
-        DLT Logistics LLC, is a full- service dispatching agency specializing in Dry Vans, </p>
+        Red Trukcing, is a full- service dispatching agency specializing in Dry Vans, </p>
       <p>
         Reefers, Flatbeds, Power Only, Hot Shots, and Box Trucks. Outsourcing DLT Logistics allows you to operate your
         company efficiently and effectively while on the road or managing a fleet. We represent you by ensuring your
         success is our success. Our foundation is built on excellence, quality service, professionalism, and in-depth
         knowledge of the transportation industry market. Allow DLT Logistics to do the work for you!
       </p>
-
-      <h2 id="service">Servcies - Expertise - Requirement</h2>
     </div>
+<div class="col-md-2 col-lg-2 col-sm-12">
+      <img class="mb-2 text-center ft-logo" src="./images/info-3.jpg" alt="">
+    </div>
+  </div>
+</div>
   </section>
 
-  <section class="g-o">
+  <section>
+    <div class="container">
+      <div class="row services-info">
+        <div class="col-md-4 col-lg-4 col-sm-12 col">
+          <div class="circle">
+            <img src="./images/info-1.jpg" alt="">
+          </div>
+          <p class="title-heading">quality services</p>
+        </div>
 
-    <div class="container our-achiememnts">
-      <div class="col-md-6 col-lg-6 col-sm-12 col">
-        <img src="./images/info-1.jpg" alt="">
-      </div>
-      <div class="col-md-6 col-lg-6 col-sm-12 col space-manage">
-        <h4>Servcies</h4>
-        <ul class="bullet">
-          <li>Optimal Rate Negotiations</li>
-          <li>Customized Load Planning</li>
-          <li>No Forced Dispatch</li>
-          <li>Broker/Shipper Credit Checks</li>
-          <li>Innovative Technology</li>
-          <li>24/7 Support Service</li>
-          <li>Back Office</li>
-          <li>Personal Dispatcher</li>
-        </ul>
+        <div class="col-md-4 col-lg-4 col-sm-12 col">
+          <div class="circle">
+            <img src="./images/info-2.jpg" alt="">
+          </div>
+          <p class="title-heading">professionalism</p>
+        </div>
+
+        <div class="col-md-4 col-lg-4 col-sm-12 col">
+          <div class="circle">
+            <img src="./images/info-3.jpg" alt="">
+          </div>
+          <p class="title-heading">in-depth knowledge</p>
+        </div>
+
+        <div class="col-md-4 col-lg-4 col-sm-12 col">
+          <div class="circle">
+            <img src="./images/info-3.jpg" alt="">
+          </div>
+          <p class="title-heading">in-depth knowledge</p>
+        </div>
+
+        <div class="col-md-4 col-lg-4 col-sm-12 col">
+          <div class="circle">
+            <img src="./images/info-3.jpg" alt="">
+          </div>
+          <p class="title-heading">in-depth knowledge</p>
+        </div>
+
+        <div class="col-md-4 col-lg-4 col-sm-12 col">
+          <div class="circle">
+            <img src="./images/info-3.jpg" alt="">
+          </div>
+          <p class="title-heading">in-depth knowledge</p>
+        </div>
       </div>
 
-    </div>
-
-    <div class="container our-achiememnts">
-      <div class="col-md-6 col-lg-6 col-sm-12 col space-manage">
-        <h4>Carrier Requirements </h4>
-        <ul class="bullet">
-          <li>Active authority with MC#/DOT#</li>
-          <li>Qualified Driver</li>
-          <li>Copy of CDL for each driver dispatched</li>
-          <li>Carrier Packet</li>
-          <li>Signed W9</li>
-          <li>NOA's (if applicable)</li>
-          <li>Certificate of Insurance</li>
-          <li>$1,000,000 in auto-liability & $100,000 in cargo coverage</li>
-          <li>Dispatcher/Carrier Agreement</li>
-          <li>Power of Attorney</li>
-          <li>New Authority Welcome and Fleet Owners</li>
-        </ul>
-      </div>
-      <div class="col-md-6 col-lg-6 col-sm-12 col">
-        <img src="./images/info-3.jpg" alt="">
-      </div>
     </div>
   </section>
-
 
   <section class="footer" id="connect">
     <div class="container">
@@ -248,7 +258,7 @@
 
 
           <div class="col-md-5 col-lg-5 col-sm-12">
-            <h3>DLT Logistics LLC.</h3>
+            <h3>Red Trukcing.</h3>
             <p>
               1250 Old Camden Rd., Winnsboro, SC 29180 <br>
               Phone : 803-766-7875<br>
@@ -302,35 +312,6 @@
       </footer>
     </div>
 
-  </section>
-
-  <section>
-    <div class="mapouter">
-      <div class="gmap_canvas"><iframe width="100%" height="500" id="gmap_canvas"
-          src="https://maps.google.com/maps?q=1250%20Old%20Camden%20Rd.,%20Winnsboro,%20SC%2029180&t=&z=13&ie=UTF8&iwloc=&output=embed"
-          frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
-          href="https://123movies-to.org"></a><br>
-        <style>
-          .mapouter {
-            position: relative;
-            text-align: right;
-            height: 500px;
-            width: 100%;
-          }
-        </style>
-        <style>
-          .gmap_canvas {
-            overflow: hidden;
-            background: none !important;
-          }
-        </style>
-      </div>
-    </div>
-    <div class="copyright" data-anchor-target="#slide-6">
-      <div class="container">
-        <p class="text-center">Copyright © 2021 - All Rights Reserved - DLT Logistics LLC</p>
-      </div>
-    </div>
   </section>
 
   <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
