--- a/rt/index.html
+++ b/rt/index.html
@@ -191,7 +191,7 @@
     </div>
   </section>
 
-  <section>
+  <section id="service">
     <div class="container">
       <div class="row more-services-info">
         <div class="col-md-4 col-lg-4 col-sm-12 col">
