--- a/rt/index.html
+++ b/rt/index.html
@@ -70,7 +70,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li>
-              <a href="#index">Home</a>
+              <a href="#index">About Us</a>
             </li>
             <li>
               <a href="#service">Services</a>
