--- a/rt/index.html
+++ b/rt/index.html
@@ -70,7 +70,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li>
-              <a href="#index">About Us</a>
+              <a href="#about">About Us</a>
             </li>
             <li>
               <a href="#service">Services</a>
@@ -95,8 +95,9 @@
             <div class="item active">
 
               <div class="carousel-caption">
-                <h2>We are the experts</h2>
-                <h3>Electrical repair, Heavy Duty <br>
+                <h3>
+                  <span>We are the experts</span><br>
+                  Electrical repair, Heavy Duty <br>
                   services, All types of truck <br>
                   repaires - Sales
                 </h3>
@@ -110,8 +111,9 @@
             <div class="item">
 
               <div class="carousel-caption">
-                <h2>We are the experts</h2>
-                <h3>Electrical repair, Heavy Duty <br>
+                 <h3>
+                  <span>We are the experts</span><br>
+                  Electrical repair, Heavy Duty <br>
                   services, All types of truck <br>
                   repaires - Sales
                 </h3>
@@ -125,8 +127,9 @@
             <div class="item">
 
               <div class="carousel-caption">
-                <h2>We are the experts</h2>
-                <h3>Electrical repair, Heavy Duty <br>
+                <h3>
+                  <span>We are the experts</span><br>
+                  Electrical repair, Heavy Duty <br>
                   services, All types of truck <br>
                   repaires - Sales
                 </h3>
@@ -148,21 +151,21 @@
       <div class="row">
         <div class="col-md-4 col-lg-4 col-sm-12 col">
           <div class="circle">
-            <img src="./images/info-1.jpg" alt="">
+            <img src="./images/heavyduty.jpg" alt="">
           </div>
           <p class="title-heading">Heavy duty sercies</p>
         </div>
 
         <div class="col-md-4 col-lg-4 col-sm-12 col">
           <div class="circle">
-            <img src="./images/info-2.jpg" alt="">
+            <img src="./images/onsite.jpg" alt="">
           </div>
           <p class="title-heading">On site asistance</p>
         </div>
 
         <div class="col-md-4 col-lg-4 col-sm-12 col">
           <div class="circle">
-            <img src="./images/info-3.jpg" alt="">
+            <img src="./images/expert-staff-3.jpg" alt="">
           </div>
           <p class="title-heading">Expert staff</p>
         </div>
@@ -171,7 +174,7 @@
     </div>
   </section>
 
-  <section class="about-us">
+  <section id="about" class="about-us">
     <div class="container">
       <div class="row">
         <div class="col-md-9 col-lg-9 col-sm-12">
@@ -196,7 +199,7 @@
       <div class="row more-services-info">
         <div class="col-md-4 col-lg-4 col-sm-12 col">
           <div class="panel-body">
-            <img src="./images/more-info-1.jpg" alt="">
+            <img src="./images/computer_diagnostics.jpg" alt="">
           </div>
           <div class="panel-footer">
             <p>Computer Diagnostics</p>
@@ -205,7 +208,7 @@
 
         <div class="col-md-4 col-lg-4 col-sm-12 col">
           <div class="panel-body">
-            <img src="./images/more-info-2.jpg" alt="">
+            <img src="./images/wheels.jpg" alt="">
           </div>
           <div class="panel-footer">
             <p>Wheel & Tire Servcies</p>
@@ -214,7 +217,7 @@
 
         <div class="col-md-4 col-lg-4 col-sm-12 col">
           <div class="panel-body">
-            <img src="./images/more-info-3.jpg" alt="">
+            <img src="./images/engineservice.jpg" alt="">
           </div>
           <div class="panel-footer">
             <p>Engine Services</p>
@@ -223,7 +226,7 @@
 
         <div class="col-md-4 col-lg-4 col-sm-12 col">
           <div class="panel-body">
-            <img src="./images/more-info-4.jpg" alt="">
+            <img src="./images/airleakservice.jpg" alt="">
           </div>
           <div class="panel-footer">
             <p>Air Leak Repair Service</p>
@@ -232,7 +235,7 @@
 
         <div class="col-md-4 col-lg-4 col-sm-12 col">
           <div class="panel-body">
-            <img src="./images/more-info-5.jpg" alt="">
+            <img src="./images/starters.jpg" alt="">
           </div>
           <div class="panel-footer">
             <p>Starters Service</p>
@@ -241,7 +244,7 @@
 
         <div class="col-md-4 col-lg-4 col-sm-12 col">
           <div class="panel-body">
-            <img src="./images/more-info-6.jpg" alt="">
+            <img src="./images/breke.jpg" alt="">
           </div>
           <div class="panel-footer">
             <p>Breke Service</p>
